# exam

./: .env  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ab577351b2a_create_initial_tables.py  61fb4b63ecb3_initial_migration.py  919bad54462d_create_tables.py  da295805986b_create_initial_tables.py
backend/db/: database.py
backend/models/: init.py  inits.py
backend/schemas/: books.py  reviews.py
backend/seeds/: seed.py
backend/src/: main.py
backend/tests/: books_test.py  reviews_test.py
backend/web/: main.py
backend/web/api/v1/: books.py  reviews.py
db/: my.cnf
documents/: er.pu
front/: Dockerfile
front/vite-app/: index.html  package-lock.json  package.json
front/vite-app/src/: App.tsx  BookDetail.tsx  BookForm.tsx  BookList.tsx  ReviewDetail.tsx  ReviewForm.tsx  ReviewList.tsx  ReviewListIinBookDetail.tsx
