[tool.poetry]
name = "exam"
version = "0.1.0"
description = "This is exam"
authors = ["Haruto Sasaki <muromisann6633.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
pymysql = "^1.1.0"
cryptography = "^42.0.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
httpx = "^0.27.0"
pytest = "^8.1.1"
